<resources>
    <string name="app_name">softxpert</string>
    <string name="pets">Pets</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="all">All</string>
    <string name="cats">Cats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="pet_details">Pet Details</string>
    <string name="pet_photo">PetPhoto</string>
    <string name="back">back</string>
    <string name="horse">Horse</string>
    <string name="bird">Bird</string>
    <string name="rabbit">Rabbit</string>
    <string name="size">Size</string>
    <string name="pet_s_website">Pet\'s Website</string>
</resources>