<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="name"
            type="String" />
        <variable
            name="gender"
            type="String" />
        <variable
            name="type"
            type="String" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pet_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="#4A000000"
                android:contentDescription="@string/pets"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/type_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:text="@{type}"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/type_txt"
                app:layout_constraintTop_toBottomOf="@+id/gender_tv" />

            <TextView
                android:id="@+id/type_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="36dp"
                android:layout_marginTop="21dp"
                android:text="@string/type"
                android:textColor="#4C4C4C"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/pet_photo"
                app:layout_constraintTop_toBottomOf="@+id/gender_tv" />

            <TextView
                android:id="@+id/gender_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@{gender}"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gender_Txt"
                app:layout_constraintTop_toBottomOf="@+id/name_tv" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="27dp"
                android:layout_marginTop="20dp"
                android:text="@{name}"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name_txt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="36dp"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textColor="#4C4C4C"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/pet_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gender_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="36dp"
                android:layout_marginTop="20dp"
                android:text="@string/gender"
                android:textColor="#4C4C4C"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/pet_photo"
                app:layout_constraintTop_toBottomOf="@+id/name_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>